--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,3 +1,5 @@
 $main-color: #148acf;
+$title-color: rgb(51, 51, 51);
+$content-color: rgb(77, 77, 77);
 $error-color: rgb(189, 61, 61);
 $border-color: rgb(222, 222, 222);
