--- a/src/ui/style/index.scss
+++ b/src/ui/style/index.scss
@@ -22,6 +22,15 @@
 .sg-flex-one {
     flex: 1;
 }
+.sg-flex-two {
+    flex: 2;
+}
+.sg-flex-three {
+    flex: 3;
+}
+.sg-flex-five {
+    flex: 5;
+}
 
 button {
     padding: 0;
