[#]优化sg的样式常量定义,[+]sg组件展示页

--- a/src/ui/style/colors.scss
+++ b/src/ui/style/colors.scss
@@ -9,3 +9,5 @@ $content-color: rgb(77, 77, 77);
 $error-color: rgb(189, 61, 61);
 
 $border-color: rgb(222, 222, 222);
+
+$color-required: $main-color;
