--- a/src/ui/style/size.scss
+++ b/src/ui/style/size.scss
@@ -1,7 +1,18 @@
-$zIndex1: 1;
-$zIndex5: 5;
-$zIndex9: 9;
+$size-title: 1.4rem;
+$size-option: 1.3rem;
+$size-text: 1.2rem; 
 
-$zIndex100: 100;
-$zIndex500: 500;
-$zIndex999: 999;
+$height-title: 3rem;
+$height-option: 2.5rem;
+$height-text: 2rem;
+
+$padding-small: 0.5rem;
+$padding-normal: 0.8rem;
+$padding-big: 1rem; 
+
+$z-index-1: 1;
+$z-index-5: 5;
+$z-index-9: 9;
+$z-index-100: 100;
+$z-index-500: 500;
+$z-index-999: 999;
