--- a/src/ui/style/index.scss
+++ b/src/ui/style/index.scss
@@ -1,4 +1,23 @@
-.sg-text-ellipsis {
+@import './const.scss';
+
+div, p, span, a {
+    padding: 0;
+    margin: 0;
+}
+
+.sg-mask {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: $z-index-normal;
+    background-color: $color-mask;
+}
+
+.sg-ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -39,5 +58,5 @@ button {
 }
 
 .iconfont {
-    font-size: 1.6rem;
+    font-size: $size-icon;
 }
