[#]优化界面的ui组件

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,4 @@
-html, body, div, p, span {
+html, body {
     padding: 0;
     margin: 0;
 }
@@ -11,8 +11,12 @@ html {
     -moz-osx-font-smoothing: grayscale;
 }
 
-body, #app {
+body {
     height: 100%;
+}
+
+h2 {
+    margin: 0.5rem 0;
 }
 
 @media screen and (min-width: 500px) {
@@ -44,5 +48,3 @@ body, #app {
         font-size: 17px;
     }
 }
-
-@import './common.scss';
